# agent-ethan2

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  MANIFEST.in  README.ja.md  README.md  docker-compose.yml  docker-entrypoint-dev.sh  pyproject.toml
.github/workflows/: release-autotag.yml
agent_ethan2/: __init__.py  agent.py  version.py
agent_ethan2/components/: __init__.py  base.py  llm.py  tool.py
agent_ethan2/converters/: v1_to_v2.py
agent_ethan2/graph/: __init__.py  builder.py  errors.py
agent_ethan2/ir/: __init__.py  model.py
agent_ethan2/loader/: __init__.py  yaml_loader.py
agent_ethan2/policy/: __init__.py  cost.py  masking.py  permissions.py  ratelimit.py  retry.py
agent_ethan2/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
examples/: __init__.py
specs/: 00-README.md  01-Tech-Baseline.md  02-Repo-Layout.md  03-Identifiers-Schemas.md  A1-YamlSchemaV2.md  A2-IR-Normalization-Compat.md  A3-Resolver-Registry.md  AgentEthan2-All.md  B1-GraphBuilder-Core.md  B2-Runtime-Scheduler.md  B3-Map-Parallel.md  B4-Retry-RateLimit.md  C1-EventBus-Telemetry.md  C2-Masking-Permissions-Cost.md  C3-ExecutionTree.md  D1-PythonComponent.md  E1-Converter-V1toV2.md  E2-Docs.md  F1-Provider-SharedRateLimit.md  F2-StrictJSON-Validation.md  Z1-Examples.md
tests/: __init__.py  conftest.py  dummies.py  test_converter_v1_to_v2.py  test_execution_tree.py  test_graph_builder.py  test_ir_normalizer.py  test_registry_resolver.py  test_runtime_scheduler.py  test_strict_json.py  test_telemetry_event_bus.py  test_yaml_loader.py
(+127 files in other folders)
