[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-ethan2"
version = "0.1.0"
description = "AgentEthan2 YAML agent runtime"
authors = [{name = "AgentEthan2"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.18",
  "langchain-core>=0.2.0",
  "langchain-openai>=0.1.0",
  "openai>=1.0.0"
]

[tool.setuptools.packages.find]
include = ["agent_ethan2*"]
exclude = ["tests*", "docs*", "specs*", "schemas*"]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "mypy>=1.7",
  "ruff>=0.1"
]

[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = [
  "error::DeprecationWarning"
]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
packages = ["agent_ethan2"]
warn_unused_configs = true
strict = true

[tool.ruff]
line-length = 100
src = ["agent_ethan2", "tests"]
select = ["E", "F", "I", "UP", "B", "S", "C4", "PIE", "Q"]
ignore = ["S101"]
